@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.007.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
 use strict;
 use warnings;
 
@@ -32,6 +32,8 @@ my %WriteMakefileArgs = (
     "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
     "Dist::Zilla::Plugin::CPANFile" => 0,
     "Dist::Zilla::Plugin::CheckPrereqsIndexed" => 0,
+    "Dist::Zilla::Plugin::CheckSelfDependency" => 0,
+    "Dist::Zilla::Plugin::CheckStrictVersion" => 0,
     "Dist::Zilla::Plugin::CheckVersionIncrement" => 0,
     "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
     "Dist::Zilla::Plugin::GenerateFile::FromShareDir" => 0,
@@ -133,6 +135,8 @@ my %FallbackPrereqs = (
   "Dist::Zilla::Plugin::BumpVersionAfterRelease" => 0,
   "Dist::Zilla::Plugin::CPANFile" => 0,
   "Dist::Zilla::Plugin::CheckPrereqsIndexed" => 0,
+  "Dist::Zilla::Plugin::CheckSelfDependency" => 0,
+  "Dist::Zilla::Plugin::CheckStrictVersion" => 0,
   "Dist::Zilla::Plugin::CheckVersionIncrement" => 0,
   "Dist::Zilla::Plugin::CopyFilesFromBuild" => 0,
   "Dist::Zilla::Plugin::GenerateFile::FromShareDir" => 0,
