@@ -6,6 +6,8 @@ requires "Dist::Zilla::Plugin::AutoPrereqs" => "0";
 requires "Dist::Zilla::Plugin::BumpVersionAfterRelease" => "0";
 requires "Dist::Zilla::Plugin::CPANFile" => "0";
 requires "Dist::Zilla::Plugin::CheckPrereqsIndexed" => "0";
+requires "Dist::Zilla::Plugin::CheckSelfDependency" => "0";
+requires "Dist::Zilla::Plugin::CheckStrictVersion" => "0";
 requires "Dist::Zilla::Plugin::CheckVersionIncrement" => "0";
 requires "Dist::Zilla::Plugin::CopyFilesFromBuild" => "0";
 requires "Dist::Zilla::Plugin::GenerateFile::FromShareDir" => "0";
